2006-03-21  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/Bidi/reorderVisually.java: New file.
	* gnu/testlet/java/text/Bidi/Basic.java: New file.

2006-03-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/SimpleTestHarness.java: Reformatted.
	* gnu/testlet/TestHarness.java: Reformatted, removed unused imports.
	* gnu/testlet/TestReport.java: Reformatted.

2006-03-19  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/awt/font/NumericShaper/Basic.java: New file.

2006-03-19  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/layout.java:
	Fixed test to check correct logic, not exact pixels.
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/getMinimumSize.java:
	Fixed test to check correct logic, not exact pixels.
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/getPreferredSize.java:
	Fixed test to check correct logic, not exact pixels.

2006-03-18  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved some cases from testdata2 to testdata1.

2006-03-17  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/security/BasicPermission/newPermission.java:
	New test.

2006-03-16  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/FontMetrics/TestLogicalFontMetrics.java:
	New test.
	Remove timer to ensure all tests are run.
	Make tolerance larger for larger font sizes.

	* gnu/testlet/java/awt/FileDialog/TestGraphics.java: New test.

2006-03-15  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/jar/JarFile/basic.java (test_jar): Log
	exception when -debug.

2006-03-15  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/getComponentAt.java:
	New Class

2006-03-15  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/addImpl.java
	(test1): Removed repaint function. Only need one. Also,
	added repaint functions to all the components.